# wyuEngine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.bat  readme.md
Demo/: CMakeLists.txt
Demo/asset/: imgui.ini
Demo/asset/model/: imgui.ini
Demo/asset/model/man/: imgui.ini
Demo/configs/development/: setting.ini
Demo/include/: GameManager.h  GameScene.h  MenuScene.h
Demo/source/: GameManager.cpp  GameScene.cpp  main.cpp  menuScene.cpp
Framework/: CMakeLists copy.txt  CMakeLists.txt
Framework/Common/: Allocator.cpp  BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  GPUManager.cpp  GfxConfiguration.h  GraphicsManager.cpp  GraphicsManager.hpp  MemoryManager.cpp  MemoryManager.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  Interface.hpp
Framework/Math/: EngineMath.h  Matrix.h  Vector.h  common.h
Platform/Empty/: CMakeLists.txt  EmptyApplication.cpp
Platform/Windows/: CMakeLists.txt  D3D12Application.cpp  WindowsApplication.cpp  WindowsApplication.hpp
RHI/: CMakeLists.txt
RHI/d3d/: CMakeLists.txt  D3D12Manager.hpp
RHI/opengl/: CMakeLists.txt  OpenGLManager.cpp  opengl.cpp
SDK/: CMakeLists.txt
SDK/stb/: CMakeLists.txt  stb.cpp
engine/: CMakeLists.txt
engine/include/: ConfigManager.h  Node.h  Node2D.h  Node3D.h  Route.h  Scene.h  WyuEngine.h
engine/include/math/: Matrix.h  Physics.h  Polygon.h
engine/source/: ConfigManager.cpp  D3D9Renderer.cpp  Node.cpp  Node2D.cpp  Node3D.cpp  SceneManager.cpp  WyuEngine.cpp  XStructures.cpp
engine/source/math/: Plane.cpp
game/: CMakeLists.txt
game/asset/: imgui.ini
game/asset/sounds/: soundsList.txt
game/asset/texture/game/: game.json  nk.json  nk.tsx
game/configs/development/: setting.ini
game/include/: GameManager.h  enemy.h  gameScene.h  main.h  menuScene.h
game/script/: setting.txt
game/source/: GameManager.cpp  enemy.cpp  gameScene.cpp  main.cpp  menuScene.cpp
sources/: CMakeLists.txt
sources/Framework/: CMakeLists.txt
sources/Framework/Common/: Allocator.cpp  Allocator.hpp  AssetLoader.cpp  AssetLoader.hpp  BMP.hpp  BaseApplication.cpp  BaseApplication.hpp  Buffer.hpp  Engine.h  GPUManager.cpp  GPUManager.hpp  GfxConfiguration.h  Image.hpp  MemoryManager.cpp  MemoryManager.hpp  Ref.hpp  RendererManager.cpp  RendererManager.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.hpp  SceneObject.hpp  Texture.cpp  Texture.hpp  main.cpp  utility.hpp  wyuEngine.cpp  wyuEngine.hpp  wyuEngineInclude.h
sources/Framework/Interface/: IApplication.hpp  IRender.hpp  IRuntimeModule.hpp  ImageParser.hpp  Interface.hpp  SceneParser.hpp
sources/Framework/Math/: EngineMath.h  Vector.h  common.h
sources/Framework/Universal/: GUI.cpp  GUI.h  defines.h  light.h  material.h  structs.h
sources/Platform/: CMakeLists.txt
sources/Platform/Empty/: CMakeLists.txt  EmptyApplication.cpp
sources/Platform/Windows/: CMakeLists.txt  D3D12Application.cpp  D3D9Application.cpp  WindowsApplication.cpp  WindowsApplication.hpp
sources/Platform/Windows/test/: CMakeLists.txt  TextureLoadTest.cpp
sources/Renderer/: CMakeLists.txt
sources/Renderer/D2d/: CMakeLists.txt  D2DRenderer.cpp  D2DRenderer.hpp  D2DRendererManager.cpp  D2DRendererManager.hpp  D2dGraphicsManager.cpp  D2dGraphicsManager.hpp
sources/Renderer/D3D12/: CMakeLists.txt  D3D12Renderer.cpp  D3D12Renderer.hpp  D3D12RendererManager.cpp  D3D12RendererManager.hpp
sources/Renderer/D3D9/: CMakeLists.txt  D3D9Renderer.cpp  D3D9Renderer.hpp  D3D9RendererManager.cpp  D3D9RendererManager.hpp
sources/Renderer/d3d/: CMakeLists.txt  D3D12Manager.cpp  D3D12Manager.hpp  D3D9Renderer.cpp  D3D9Renderer.hpp
sources/Renderer/opengl/: CMakeLists.txt  OpenGLManager.cpp  OpenGLManager.hpp
test/: CMakeLists.txt  main.cpp  main.h
